# mecocoa

./: .gitignore  DEMONSTRATION.md  Kconfig  Kernel.asm  Kernel32.asm  LICENSE  MEMLOG.md  Makefile  Makefile.inc  Memmap.md  Memory-Map.md  Program-Format.md  README.md  README.zh-cn.md  REFERENCE  SUBAPP.md  Shell32.asm  Toolchain.inc  helloa.asm  hellob.asm  test.asm  test2.asm  test3.asm
.codex/: AGENTS.md
accmlib/: README.md  accmrv.ld  accmrv32.make  accmrv64.make  accmx64.clang.make  accmx64.make  accmx86.clang.make  accmx86.gcc.make  accmx86.make  lib.cpp  lib_con.cpp  lib_fileman.cpp  lib_graphic.cpp  lib_memory.cpp  lib_process.cpp  lib_stdio.cpp  lib_threads.cpp  libm-bridge-x64.c  others-c.c  others.asm  others.c  startup.c  startup.cpp
bootmgr/: bootmgr.cpp
cocheck/: check_interrupt.asm  riscv64.gdbinit
cokasha/: codebug.asm  cointer.asm  kernel.asm  kernel.h  kernel.inc  kernel.ld  rout16.asm  rout32.asm
configs/: _mk_mcca.sh  atx-x64-long64.make  atx-x64-uefi64.make  atx-x86-flap32.accm.make  atx-x86-flap32.bochsdbg-lin.pl  atx-x86-flap32.bochsdbg.pl  atx-x86-flap32.cfg  atx-x86-flap32.make  bochsdbg.pl  grub-x86.txt  qemuvirt-a64.make  qemuvirt-r32.make  qemuvirt-r32.pl  qemuvirt-r64.make  qemuvirt-r64.pl  qemuvirt-riscv.pl  raspi3-ac53.make
coshell/: shell16.c  shell16.ld  shell32.c  shell32.cpp  shell32.h  shell32.ld
depends/: cotlabx.cpp  freetype.cpp
devdriv/: kboard.cpp  kmouse.cpp
documnt/: 00-Drivers.md  (+15 more)
subapps/hellod/: Cargo.toml  hellod.ld  rust-toolchain.toml
subapps/hellod/.cargo/: config.toml
subapps/hellod/src/: main.rs
subapps/hellorust/: Cargo.toml  build.rs
subapps/hellorust/.cargo/: config.toml
subapps/hellorust/src/: main.rs
(+301 files in other folders)
