cargo-features = ["profile-rustflags"] # "edition2021"

[package]
name = "hellorust"
version = "0.1.1"
edition = "2021"
authors = ["dosconio <dosconyo@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]

#[unstable]
#build-std = ["core", "compiler_builtins", "alloc"]

